config("jsoncpp_config") {
  include_dirs = [ "include" ]
}

static_library("jsoncpp") {
  sources = [
    "include/json/allocator.h",
    "include/json/assertions.h",
    "include/json/autolink.h",
    "include/json/config.h",
    "include/json/features.h",
    "include/json/forwards.h",
    "include/json/json.h",
    "include/json/reader.h",
    "include/json/value.h",
    "include/json/version.h",
    "include/json/writer.h",
    
    "src/lib_json/json_reader.cpp",
    "src/lib_json/json_writer.cpp",
    "src/lib_json/json_value.cpp",
  ]
  public_configs = [ ":jsoncpp_config" ]
}

executable("jsoncpp_test") {
  sources = [
    "src/test_lib_json/jsontest.cpp",
    "src/test_lib_json/main.cpp",
  ]
  deps = [ ":jsoncpp" ]
}
